kubernetes/backend.yaml
---
# Service pour le Backend
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: aymenbenchaabane
  labels:
    app: backend
spec:
  selector:
    app: backend
  ports:
  - port: 5000
    targetPort: 5000
    protocol: TCP
  type: ClusterIP
