kubernetes/frontend.yaml
---
# Service pour le Frontend
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: aymenbenchaabane
  labels:
    app: frontend
spec:
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  type: ClusterIP
