kubernetes/rabbitmq.yaml
---
# Service pour RabbitMQ
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-service
  namespace: aymenbenchaabane
  labels:
    app: rabbitmq
spec:
  selector:
    app: rabbitmq
  ports:
  - port: 5672
    targetPort: 5672
    protocol: TCP
    name: amqp
  - port: 15672
    targetPort: 15672
    protocol: TCP
    name: management
  type: ClusterIP
