kubernetes/redis.yaml
---
# Service pour Redis
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: aymenbenchaabane
  labels:
    app: redis
spec:
  selector:
    app: redis
  ports:
  - port: 6379
    targetPort: 6379
    protocol: TCP
  type: ClusterIP
